--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,7 +14,9 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.2"
+    "mongoose": "^8.7.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
